# gun-native

./: .gitignore  .gitmodules  README.md  gun.py  package.json  pyproject.toml
.nectar/uuuvr/: njs.h
build_debug/: nectar_gun.js_1.txt
nectar/: gun.js  nectar.out.txt
nectar/.nectar/9uepo/class/: _meta.h
nectar/.nectar/9uepo/lib/: console.h  math.h  native_object.h
nectar/.nectar/9uepo/libregexp/: regexp.h
