[tool.poetry]
name = "gun-native"
version = "0.0.2"
description = "Python port of gundb."
authors = ["TensorTom <14287229+TensorTom@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Js2Py = "^0.70"
numpy = "^1.19.1"
pprint = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
